--- a/resources/themes/phone/modules/_share.scss
+++ b/resources/themes/phone/modules/_share.scss
@@ -63,7 +63,7 @@
 		}
 	}
 	.email-button{
-		background: #ffa500;
+		background: $light-grey;
 		border: 1px solid #ffffff;
 		margin: 20px auto;
 		
