--- a/resources/sass/phone/_all.scss
+++ b/resources/sass/phone/_all.scss
@@ -26,6 +26,7 @@
 @import '../../themes/phone/modules/call';
 @import '../../themes/phone/modules/contact';
 @import '../../themes/phone/modules/share';
+@import '../../themes/phone/modules/settings';
 @import '../../themes/phone/modules/search';
 
 /**********************************************************************************************************************/
