--- a/resources/themes/phone/modules/_articles.scss
+++ b/resources/themes/phone/modules/_articles.scss
@@ -160,8 +160,9 @@
 		}
 		img{
 			position: relative;
-			left: 50%;
-			@include wbz-transform(translateX(-50%));
+			/*left: 50%;*/
+			/*@include wbz-transform(translateX(-50%));*/
+			margin: 0 auto;
 		}
 	}
 }
