--- a/resources/themes/phone/modules/_maps.scss
+++ b/resources/themes/phone/modules/_maps.scss
@@ -56,6 +56,12 @@
 					@include wbz-inline-icon(link, 20px);
 				}
 			}
+			&.item-pressed{
+				background: #ebebeb;
+			}
+			&.item-selected{
+				background: #ebebeb;
+			}
 		}
 	}
 }
