--- a/resources/sass/tablet/_all.scss
+++ b/resources/sass/tablet/_all.scss
@@ -19,6 +19,8 @@
 @import '../../themes/tablet/modules/categories';
 @import '../../themes/tablet/modules/actions';
 @import '../../themes/tablet/modules/articles';
+@import '../../themes/tablet/modules/article-actions';
+@import '../../themes/tablet/modules/comments';
 @import '../../themes/tablet/modules/rate';
 @import '../../themes/tablet/modules/videos';
 @import '../../themes/tablet/modules/media';
