--- a/resources/themes/tablet/mixins/_icon.scss
+++ b/resources/themes/tablet/mixins/_icon.scss
@@ -56,6 +56,7 @@
 	@else if ($name == "delete") { @return "\43"; }
 	@else if ($name == "checkmark") { @return "\44"; }
 	@else if ($name == "email") { @return "\45"; }
+	@else if ($name == "user") { @return "\46"; }
 
 	
     @else {
