--- a/resources/themes/tablet/modules/_comments.scss
+++ b/resources/themes/tablet/modules/_comments.scss
@@ -59,6 +59,14 @@
 							background-position: center;
 							width: 50px;
 							height: 50px;
+							@include wbz-inline-icon(user, 26px);
+							color: $grey;
+							
+							&::before{
+								width: 50px;
+								height: 50px;
+								line-height: 50px;
+							}
 						}
 					}
 					.comment-right{
@@ -125,13 +133,12 @@
 		&.x-layout-card-item{
 			background: #ffffff;
 		}
-		
-			
 		.header h1{
 			font-size: 22px;
 			color: $orange;
 			line-height: 22px;
-			margin: 10px 0px 20px 0px;
+			padding: 10px 0px 20px 0px;
+			margin: 0;
 		} 
 		.errors{
 			.x-innerhtml{
