--- a/resources/themes/tablet/modules/_comments.scss
+++ b/resources/themes/tablet/modules/_comments.scss
@@ -59,13 +59,17 @@
 							background-position: center;
 							width: 50px;
 							height: 50px;
-							@include wbz-inline-icon(user, 26px);
-							color: $grey;
+							@include wbz-border-radius(50px);
+							@include wbz-inline-icon(user, 50px);
+							color: #ffffff;
+							text-align: center;
+							background: $light-blue;
 							
 							&::before{
 								width: 50px;
 								height: 50px;
 								line-height: 50px;
+								position: relative;
 							}
 						}
 					}
@@ -229,7 +233,9 @@
 			border: 1px solid #ffffff;
 			
 			.send{
-				display: none;
+				@include wbz-inline-icon(comment_empty, 20px);
+				color: #ffffff;
+				
 			}
 			.x-button-label{
 				color: #ffffff;
@@ -237,6 +243,7 @@
 				font-weight: normal;
 				font-family: "opensans-regular";
 				text-align: center;
+				margin-left: 0px;
 			}
 		}
 	}
